add controls to flappy bird game

--- a/examples/flappy-bird/index.html
+++ b/examples/flappy-bird/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app">
       <canvas id="canvas" width="414" height="621" tabindex="1"></canvas>
+      <div id="controller"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
