add pong + improve flappy bird gameplay

--- a/examples/pong/index.html
+++ b/examples/pong/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app">
       <canvas id="canvas"></canvas>
+      <div id="controller"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
