add apps to footer links

--- a/examples/chart/index.html
+++ b/examples/chart/index.html
@@ -23,7 +23,11 @@
     <div id="app"></div>
     <footer>
       <small>
-        <a href="https://hangtime.stevie-ray.nl/" target="_blank"> <i class="fa-regular fa-copyright"></i> HangTime </a
+        <a href="https://hangtime.stevie-ray.nl/" target="_blank"> <i class="fa-regular fa-copyright"></i> HangTime: </a
+        ><a href="https://play.google.com/store/apps/details?id=nl.stevie.ray.hangtime" target="_blank">
+          <i class="fab fa-android"></i> Android </a
+        ><a href="https://apps.apple.com/us/app/hangtime-hangboard-training/id1631706818" target="_blank">
+          <i class="fab fa-apple"></i> iOS </a
         >|
         <a href="https://github.com/Stevie-Ray/hangtime-grip-connect" target="_blank">
           <i class="fab fa-github"></i> Github </a
