--- a/examples/chart/index.html
+++ b/examples/chart/index.html
@@ -17,8 +17,20 @@
       gtag("config", "G-ZWEEFGC3J1")
     </script>
     <header>
-      <h1>Grip Connect</h1>
-      <h2><i class="fa-brands fa-bluetooth"></i> Web Bluetooth API Force-Sensing strength analysis for climbers</h2>
+      <h1>
+        <svg xmlns="http://www.w3.org/2000/svg" width="41" height="49">
+          <g fill="currentColor" fill-rule="nonzero">
+            <path
+              d="M13.97 4.838h13.4V.279h-13.4v4.559Zm0 2.21a6.724 6.724 0 0 0 3.829 6.065V28.32h1.914v-6.718h1.914v6.718h1.914V13.103a6.7 6.7 0 0 0 3.829-6.055h-1.915a4.791 4.791 0 0 1-4.785 4.798 4.791 4.791 0 0 1-4.785-4.798m4.785 0a1.91 1.91 0 0 0-1.914 1.919 1.91 1.91 0 0 0 1.914 1.92 1.911 1.911 0 0 0 1.914-1.92 1.91 1.91 0 0 0-1.914-1.92Z"
+            />
+            <path
+              d="m36.354 14.952 3.182-3.24c-.964-1.163-2.017-2.258-3.16-3.216l-3.181 3.239a20.258 20.258 0 0 0-3.784-2.423 6.957 6.957 0 0 1-2.166 3.982c5.341 2.544 9.042 8.048 9.042 14.455 0 8.828-7.014 15.968-15.686 15.968S4.915 36.577 4.915 27.749c0-6.467 3.771-12.014 9.193-14.525a6.967 6.967 0 0 1-2.352-3.888C5.059 12.673.433 19.648.433 27.75c0 11.337 9.008 20.53 20.168 20.53s20.168-9.193 20.168-20.53c0-4.836-1.659-9.284-4.415-12.797Z"
+            />
+          </g>
+        </svg>
+        <span>Grip Connect</span>
+      </h1>
+      <h2><i class="fa-brands fa-bluetooth"></i> Web Bluetooth API force-sensing strength analysis for climbers</h2>
     </header>
     <div id="app"></div>
     <footer>
