two line footer

--- a/examples/chart/index.html
+++ b/examples/chart/index.html
@@ -45,7 +45,7 @@
           <i class="fab fa-github"></i> Github </a
         >|
         <a href="https://stevie-ray.github.io/hangtime-grip-connect/" target="_blank">
-          <i class="fa-solid fa-book"></i> Documentation </a
+          <i class="fa-solid fa-book"></i> Docs </a
         >|
         <a href="https://caniuse.com/web-bluetooth" target="_blank">
           <i class="fa-solid fa-globe"></i> Browser Support </a
