--- a/examples/kilter-board/index.html
+++ b/examples/kilter-board/index.html
@@ -19,7 +19,7 @@
         <image href="public/img/kilterboard-small.svg" height="1170" width="1080"></image>
       </svg>
       <p>
-        Bluetooth payload:
+        <strong>Bluetooth payload:</strong>
         <code id="active-holds"></code>
       </p>
       <div id="controller"></div>
