Add active watcher and isActive boolean

--- a/examples/chart/index.html
+++ b/examples/chart/index.html
@@ -35,8 +35,10 @@
     <div id="app"></div>
     <footer>
       <small>
-        <a href="https://hangtime.stevie-ray.nl/" target="_blank"> <i class="fa-regular fa-copyright"></i> HangTime: </a
-        ><a href="https://play.google.com/store/apps/details?id=nl.stevie.ray.hangtime" target="_blank">
+        <a href="https://hangtime.stevie-ray.nl/" target="_blank">
+          <i class="fa-regular fa-copyright"></i> HangTime:
+        </a>
+        <a href="https://play.google.com/store/apps/details?id=nl.stevie.ray.hangtime" target="_blank">
           <i class="fab fa-android"></i> Android </a
         ><a href="https://apps.apple.com/us/app/hangtime-hangboard-training/id1631706818" target="_blank">
           <i class="fab fa-apple"></i> iOS </a
@@ -49,6 +51,9 @@
         >|
         <a href="https://caniuse.com/web-bluetooth" target="_blank">
           <i class="fa-solid fa-globe"></i> Browser Support </a
+        >|
+        <a href="https://grip-connect-kilter-board.vercel.app/" target="_blank">
+          <i class="fa-solid fa-chess-board"></i> Kilter Board </a
         >|
         <a href="https://grip-connect-flappy-bird.vercel.app/" target="_blank">
           <i class="fa-solid fa-gamepad"></i> Flappy Bird </a
