Add placement roles to Kilter Board script, print route string format to console

--- a/examples/kilter-board/index.html
+++ b/examples/kilter-board/index.html
@@ -15,8 +15,8 @@
         id="svg-kb"
         style="max-height: 750px"
       >
-        <image href="public/img/kilterboard-large.svg" height="1170" width="1080"></image>
-        <image href="public/img/kilterboard-small.svg" height="1170" width="1080"></image>
+        <image href="/img/kilterboard-large.svg" height="1170" width="1080"></image>
+        <image href="/img/kilterboard-small.svg" height="1170" width="1080"></image>
       </svg>
       <p>
         <strong>Bluetooth payload:</strong>
