set route as URL parameter and set default route (Narasaki Bounce set by VinceThePrince)

--- a/examples/chart/index.html
+++ b/examples/chart/index.html
@@ -52,7 +52,10 @@
         <a href="https://caniuse.com/web-bluetooth" target="_blank">
           <i class="fa-solid fa-globe"></i> Browser Support </a
         >|
-        <a href="https://grip-connect-kilter-board.vercel.app/" target="_blank">
+        <a
+          href="https://grip-connect-kilter-board.vercel.app/?route=p1083r15p1117r15p1164r12p1185r12p1233r13p1282r13p1303r13p1372r13p1392r14p1505r15"
+          target="_blank"
+        >
           <i class="fa-solid fa-chess-board"></i> Kilter Board </a
         >|
         <a href="https://grip-connect-flappy-bird.vercel.app/" target="_blank">
