remove dead link

--- a/examples/chart/index.html
+++ b/examples/chart/index.html
@@ -59,9 +59,8 @@
           <i class="fa-solid fa-chess-board"></i> Kilter Board </a
         >|
         <a href="https://grip-connect-flappy-bird.vercel.app/" target="_blank">
-          <i class="fa-solid fa-gamepad"></i> Flappy Bird </a
-        >|
-        <a href="https://grip-connect-pong.vercel.app/" target="_blank"> <i class="fa-solid fa-gamepad"></i> Pong </a>
+          <i class="fa-solid fa-gamepad"></i> Flappy Bird
+        </a>
       </small>
     </footer>
     <script type="module" src="/src/main.ts"></script>
