add pwa + wakelock support

--- a/examples/chart/index.html
+++ b/examples/chart/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grip Connect</title>
+    <link rel="icon" href="img/pwa-192x192.png" type="image/png" sizes="192x192" />
+    <meta name="theme-color" content="#242424" />
   </head>
   <body>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZWEEFGC3J1"></script>
