--- a/examples/flappy-bird/index.html
+++ b/examples/flappy-bird/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/img/pwa-192x192.png" type="image/png" sizes="192x192" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#242424" />
     <title>Grip Connect Example - Flappy Bird</title>
   </head>
   <body>
